--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,13 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mr-auto py-0">
+                    <a href="index.html" class="nav-item nav-link ">หน้าหลัก</a>
                     <a href="main.html" class="nav-item nav-link">ฟุตบอลต่างประเทศ</a>
-                    <a href="newssport.html" class="nav-item nav-link">ฟุตบอลไทย</a>                   
-                    <a href="contact.html" class="nav-item nav-link active">เเนะนำตัว</a>
+                    <a href="newssport.html" class="nav-item nav-link">ฟุตบอลไทย</a>
+                    <a href="contact.html" class="nav-item nav-link active">เเเนะนำตัว</a>
                 </div>
                 <div class="input-group ml-auto" style="width: 100%; max-width: 300px;">
-                    <input type="text" class="form-control" placeholder=" ค้าหา">
+                    <input type="text" class="form-control" placeholder="Keyword">
                     <div class="input-group-append">
                         <button class="input-group-text text-secondary"><i
                                 class="fa fa-search"></i></button>
@@ -160,6 +161,11 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 mb-5">
                     <h1 class="mb-2 mt-n2 display-5 text-uppercase"><span class="text-primary">NU</span>SPORT</h1>
+                    <p>Credit ข้อมูลเเละรูปภาพจาก</p>
+                    <p>twitter :Fabrizio Romano</p>
+                    <p>Facebook :Sukhothai FC</p>
+                    <p>Facebook :Thai league</p>
+                    
                 </a>
                 
             </div>
