--- a/newssport.html
+++ b/newssport.html
@@ -59,9 +59,9 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav mr-auto py-0">
+                    <a href="index.html" class="nav-item nav-link ">หน้าหลัก</a>
                     <a href="main.html" class="nav-item nav-link">ฟุตบอลต่างประเทศ</a>
-                    <a href="newssport.html" class="nav-item nav-link">ฟุตบอลไทย</a>                   
-                 
+                    <a href="newssport.html" class="nav-item nav-link active">ฟุตบอลไทย</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">กีฬาอื่นๆ</a>
                         <div class="dropdown-menu rounded-0 m-0">
@@ -70,10 +70,10 @@
                             <a href="#" class="dropdown-item">ฟุตซอล</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">เเนะนำตัว</a>
+                    <a href="contact.html" class="nav-item nav-link">เเเนะนำตัว</a>
                 </div>
                 <div class="input-group ml-auto" style="width: 100%; max-width: 300px;">
-                    <input type="text" class="form-control" placeholder="ค้นหา">
+                    <input type="text" class="form-control" placeholder="Keyword">
                     <div class="input-group-append">
                         <button class="input-group-text text-secondary"><i
                                 class="fa fa-search"></i></button>
